group chat height issue fixed on firefox

--- a/client/src/components/playlist/playlist.scss
+++ b/client/src/components/playlist/playlist.scss
@@ -1,6 +1,4 @@
 .playlist-container {
-  display: flex;
-  flex-direction: column;
   height: 100%;
   width: 100%;
   overflow: auto;
